// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Client-side Hydration > 'Island with barrel import' 1`] = `
<div>
  <h1>
    Page
  </h1>
  <vue-island
    entry="/assets/barrel-[hash].js"
    imported-name="Counter"
  >
    <button>
      Count: 0
    </button>
  </vue-island>
</div>
`;

exports[`Client-side Hydration > 'Island with named import' 1`] = `
<div>
  <h1>
    Page
  </h1>
  <vue-island
    entry="/assets/named-import-[hash].js"
    imported-name="Counter"
  >
    <button>
      Count: 0
    </button>
  </vue-island>
</div>
`;

exports[`Client-side Hydration > 'Island with props' 1`] = `
<div>
  <vue-island
    entry="/assets/Counter-[hash].js"
    serialized-props="{&quot;count&quot;:42,&quot;label&quot;:&quot;Click me&quot;}"
  >
    <button label="Click me">
      Count: 42
    </button>
  </vue-island>
</div>
`;

exports[`Client-side Hydration > 'Island with visible strategy' 1`] = `
<div>
  <div style="height:2000px;">
    Spacer
  </div>
  <vue-island
    entry="/assets/Counter-[hash].js"
    serialized-props="{&quot;count&quot;:10}"
    strategy="visible"
  >
    <button>
      Count: 10
    </button>
  </vue-island>
</div>
`;

exports[`Client-side Hydration > 'Multiple islands on the same page' 1`] = `
<div>
  <vue-island entry="/assets/CounterA-[hash].js">
    <button>
      Counter A
    </button>
  </vue-island>
  <vue-island entry="/assets/CounterB-[hash].js">
    <button>
      Counter B
    </button>
  </vue-island>
</div>
`;

exports[`Client-side Hydration > 'Nested island' 1`] = `
<div>
  <vue-island entry="/assets/Outer-[hash].js">
    <div class="outer">
      <span>
        Outer
      </span>
      <span class="inner">
        Inner
      </span>
    </div>
  </vue-island>
</div>
`;

exports[`Client-side Hydration > 'SVG image asset' 1`] = `
<div class="wrapper">
  <h1>
    SVG Image
  </h1>
  <img
    src="/assets/icon-[hash].svg"
    alt="icon"
  >
  <vue-island entry="/assets/Counter-[hash].js">
    <button>
      Count: 0
    </button>
  </vue-island>
</div>
`;
